[gd_scene load_steps=5 format=3 uid="uid://ckqcd524en7cb"]

[ext_resource type="Script" path="res://Scenes/ui/EnemyAttackIcon.gd" id="1_h63hl"]
[ext_resource type="LabelSettings" uid="uid://ccugtg3ly1noj" path="res://Misc/CardLabelSettings.tres" id="2_ujt7e"]
[ext_resource type="PackedScene" uid="uid://byt5jsdywffm7" path="res://Scenes/ui/Tooltip.tscn" id="3_evhs4"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8h5h7"]
load_path = "res://.godot/imported/damage.png-aa9d8406b78a799e0d6830c7106f7a8d.ctex"

[node name="EnemyAttackIcon" type="Control"]
light_mask = 4
visibility_layer = 4
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchor_right = 0.067
anchor_bottom = 0.118
offset_left = 1.0
offset_top = -1.0
offset_right = -63.64
offset_bottom = -64.44
scale = Vector2(2, 2)
script = ExtResource("1_h63hl")

[node name="Node2D" type="Node2D" parent="."]
light_mask = 4
visibility_layer = 4
scale = Vector2(2, 2)

[node name="Sprite" type="Sprite2D" parent="Node2D"]
light_mask = 4
visibility_layer = 4
position = Vector2(16.05, 16.05)
scale = Vector2(1.02813, 1.0125)
texture = SubResource("CompressedTexture2D_8h5h7")

[node name="AmountLabel" type="Label" parent="Node2D"]
light_mask = 4
visibility_layer = 4
offset_left = 24.0
offset_top = 18.5
offset_right = 34.0
offset_bottom = 34.5
text = "3"
label_settings = ExtResource("2_ujt7e")

[node name="Tooltip" parent="." instance=ExtResource("3_evhs4")]
layout_mode = 1
offset_left = 97.5
offset_top = 6.0
offset_right = 261.332
offset_bottom = 67.856

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
